--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -28,6 +28,7 @@ gem 'coffee-script'
 gem 'sass'
 gem 'slim'
 gem 'mongoid', '~>3.0.0'
+gem "will_paginate_mongoid", "~> 2.0.1"
 
 # Test requirements
 
