New worker server version.

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ Gemfile.lock
 log/**/*
 tmp/**/*
 nohup.out
+*.out
 webapp/tmp/*
 webapp/log/*
 webapp/.sass-cache
 bin/*
 worker_server/temp/*
+worker_server/temp_work/*
 vendor/gems/*
 !vendor/gems/cache/
 .sass-cache/*
