--- a/worker_server/Gemfile
+++ b/worker_server/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 # Ruby required version.
-#ruby=2.1.1
+#ruby=jruby-1.7.11
 
 ################################################################################
 # Environment gems and configurations
