More external references added.

--- a/worker_server/configs/pbs_finder.yml
+++ b/worker_server/configs/pbs_finder.yml
@@ -48,6 +48,7 @@
   :ezgsy: Gene Symbol
   :genna: GenBank Nucleotide Accession
   :rseqr: RefSeq mRNA Accession
+  :unprt: UniProt Accession
 
 :species:
   ENSAME: '9646'
