Major worker refactoring. Worker and database logic redone. Database classes modified.

--- a/worker_server/Gemfile
+++ b/worker_server/Gemfile
@@ -39,3 +39,6 @@ gem "bio", "~> 1.4.3.0001"
 
 # Mongoid MongoDB ODM.
 gem 'mongoid', '~>3.0.0'
+
+# Rubocop syntax checker.
+gem 'rubocop', '~> 0.20.1'
