Simplified Ensembl URLs.

--- a/worker_server/configs/pbs_finder.yml
+++ b/worker_server/configs/pbs_finder.yml
@@ -18,7 +18,10 @@
 :uniprot:
   :url:               www.uniprot.org
   :entry_path:        /uniprot
+  :batch_path:        /batch/
   :parameter_query:   query
+  :parameters_batch:
+    format:           txt
   :parameters:
     columns:          id,reviewed,genes,taxon,organism-id
     format:           tab
