--- a/worker_server/Gemfile
+++ b/worker_server/Gemfile
@@ -40,5 +40,8 @@ gem "bio", "~> 1.4.3.0001"
 # Mongoid MongoDB ODM.
 gem 'mongoid', '~>3.0.0'
 
+# GridFS
+gem 'mongoid-grid_fs', '~> 2.1.0'
+
 # Rubocop syntax checker.
 gem 'rubocop', '~> 0.20.1'
