--- a/worker_server/Gemfile
+++ b/worker_server/Gemfile
@@ -48,3 +48,8 @@ gem 'rubocop', '~> 0.20.1'
 
 # RSRuby,
 gem 'rsruby', '~> 0.5.1.1'
+gem 'rserve-simpler', '~> 0.0.6'
+gem 'rserve-client', '~> 0.3.1'
+
+# Jaccard index.
+gem 'jaccard', '~> 1.0.2'
